# PiCrossCompile

./: CMakeLists.txt  Makefile  README.md  setupToolchain.sh
src/: main.cpp
